feat: endpoint swagger
