# apps/backend/app/Docs/EndpointDocs.php
@@ -126,6 +126,46 @@ class EndpointDocs
     public function show() {}
 
     #[OA\Post(
+        path: '/api/v1/endpoint/sendOTP',
+        operationId: 'sendOTP',
+        summary: 'send OTP code',
+        security: [['bearerAuth' => []]],
+        requestBody: new OA\RequestBody(
+            required: true,
+            content: new OA\JsonContent(
+                required: ['type', 'value'],
+                properties: [
+                    new OA\Property(
+                        property: 'type',
+                        type: 'string',
+                        enum: ['sms', 'call', 'email'],
+                        example: 'sms'
+                    ),
+                    new OA\Property(property: 'value', type: 'string', example: '09000000000'),
+                ]
+            )
+        ),
+        tags: ['Endpoints'],
+        responses: [
+            new OA\Response(
+                response: 201,
+                description: 'OTP code has been sent successfully.',
+                content: new OA\JsonContent(
+                    properties: [
+                        new OA\Property(property: 'status', type: 'boolean', example: true),
+                        new OA\Property(
+                            property: 'data',
+                            ref: '#/components/schemas/Endpoint'
+                        ),
+                    ]
+                )
+            ),
+            new OA\Response(response: 422, description: 'Validation error'),
+        ]
+    )]
+    public function SendOTPCode() {}
+
+    #[OA\Post(
         path: '/api/v1/endpoint',
         operationId: 'createEndpoint',
         summary: 'Create new endpoint',
@@ -143,6 +183,12 @@ class EndpointDocs
                         example: 'sms'
                     ),
                     new OA\Property(property: 'value', type: 'string', example: '09000000000'),
+                    new OA\Property(
+                        property: 'otpCode',
+                        description: 'For sms, call, email type the otp verification is required',
+                        type: 'string',
+                        example: '12345'
+                    ),
                     new OA\Property(property: 'chatId', description: 'For Telegram type', type: 'string'),
                     new OA\Property(property: 'threadId', description: 'For Telegram type', type: 'string'),
                     new OA\Property(property: 'botToken', description: 'For Telegram type', type: 'string'),
@@ -220,6 +266,12 @@ class EndpointDocs
                         example: 'telegram'
                     ),
                     new OA\Property(property: 'value', type: 'string', example: '09000000000'),
+                    new OA\Property(
+                        property: 'otpCode',
+                        description: 'For sms, call, email type the otp verification is required if the value updated in process',
+                        type: 'string',
+                        example: '12345'
+                    ),
                     new OA\Property(property: 'chatId', description: 'For Telegram type', type: 'string'),
                     new OA\Property(property: 'threadId', description: 'For Telegram type', type: 'string'),
                     new OA\Property(property: 'botToken', description: 'For Telegram type', type: 'string'),
